fix: test the backup job and pv

--- a/helm/int-activitypub/values.yaml
+++ b/helm/int-activitypub/values.yaml
@@ -130,3 +130,7 @@ db:
 log:
   # https://pkg.go.dev/golang.org/x/exp/slog#Level
   level: -4
+secret:
+  backup:
+    image: "scratch"
+    schedule: "0 0 * * *" # daily at midnight (UTC)
