--- a/helm/int-activitypub/templates/job-secrets-backup.yaml
+++ b/helm/int-activitypub/templates/job-secrets-backup.yaml
@@ -29,6 +29,7 @@ spec:
               volumeMounts:
                 - name: "{{ include "int-activitypub.fullname" . }}-backup"
                   mountPath: /var/backup
+                  readOnly: false
               command:
                 - "/bin/sh"
                 - "-c"
