--- a/helm/int-activitypub/templates/pvc-backup.yaml
+++ b/helm/int-activitypub/templates/pvc-backup.yaml
@@ -4,7 +4,7 @@ metadata:
   name: "{{ include "int-activitypub.fullname" . }}-backup"
 spec:
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   resources:
     requests:
       storage: 1Mi
