fix: test the backup job and pv

--- a/helm/int-activitypub/templates/job-secrets-backup.yaml
+++ b/helm/int-activitypub/templates/job-secrets-backup.yaml
@@ -12,6 +12,16 @@ spec:
             - name: "{{ include "int-activitypub.fullname" . }}-tls-secret-backup"
               image: "{{ .Values.secret.backup.image }}"
               env:
+                - name: API_KEY_PRIVATE
+                  valueFrom:
+                    secretKeyRef:
+                      name: "{{ include "int-activitypub.fullname" . }}-keys"
+                      key: "private"
+                - name: API_KEY_PUBLIC
+                  valueFrom:
+                    secretKeyRef:
+                      name: "{{ include "int-activitypub.fullname" . }}-keys"
+                      key: "public"
                 {{- if .Values.ingressHttpV1.tls }}
                 {{- range .Values.ingressHttpV1.tls }}
                 - name: SECRET_TLS_CRT
@@ -34,11 +44,29 @@ spec:
                 - "/bin/sh"
                 - "-c"
                 - |
+                  if [ -n "$API_KEY_PRIVATE" ]; then  # Check if secret is not empty
+                    echo "Original secret api.key.private is not empty. Creating backup..."
+                    echo "$API_KEY_PRIVATE" > /var/backup/api.key.private
+                  else
+                    echo "Original secret api.key.private is empty. Skipping backup."
+                  fi
+                  if [ -n "$API_KEY_PUBLIC" ]; then  # Check if secret is not empty
+                    echo "Original secret api.key.public is not empty. Creating backup..."
+                    echo "$API_KEY_PUBLIC" > /var/backup/api.key.public
+                  else
+                    echo "Original secret api.key.public is empty. Skipping backup."
+                  fi
                   if [ -n "$SECRET_TLS_CRT" ]; then  # Check if secret is not empty
                     echo "Original secret tls.crt is not empty. Creating backup..."
                     echo "$SECRET_TLS_CRT" > /var/backup/tls.crt
                   else
-                    echo "Original secret is empty. Skipping backup."
+                    echo "Original secret tls.crt is empty. Skipping backup."
+                  fi
+                  if [ -n "$SECRET_TLS_KEY" ]; then  # Check if secret is not empty
+                    echo "Original secret tls.key is not empty. Creating backup..."
+                    echo "$SECRET_TLS_KEY" > /var/backup/tls.key
+                  else
+                    echo "Original secret tls.key is empty. Skipping backup."
                   fi
           restartPolicy: OnFailure
           volumes:
