fix: test the backup job and pv

--- a/helm/int-activitypub/templates/job-secrets-backup.yaml
+++ b/helm/int-activitypub/templates/job-secrets-backup.yaml
@@ -3,14 +3,14 @@ kind: CronJob
 metadata:
   name: "{{ include "int-activitypub.fullname" . }}-secrets-backup"
 spec:
-  schedule: "{{ .Values.secret.backup.schedule }}"
+  schedule: "{{ .Values.secrets.backup.schedule }}"
   jobTemplate:
     spec:
       template:
         spec:
           containers:
             - name: "{{ include "int-activitypub.fullname" . }}-tls-secret-backup"
-              image: "{{ .Values.secret.backup.image }}"
+              image: "{{ .Values.secrets.backup.image }}"
               env:
                 - name: API_KEY_PRIVATE
                   valueFrom:
