--- a/helm/int-activitypub/values.yaml
+++ b/helm/int-activitypub/values.yaml
@@ -121,6 +121,8 @@ db:
     name:
       followers: followers
       following: following
+    retention:
+      following: "720h"
     shard:
       followers: true
       following: true
