feat: awakari.app instance

--- a/helm/int-activitypub/values-awakari-app.yaml
+++ b/helm/int-activitypub/values-awakari-app.yaml
@@ -21,6 +21,7 @@ ingressHttpV1:
         - activitypub.awakari.app
 
 db:
+  table:
     name:
       followers: followers-awakari-app
       following: following-awakari-app
