feat: awakari.app instance

--- a/helm/int-activitypub/values.yaml
+++ b/helm/int-activitypub/values.yaml
@@ -90,6 +90,8 @@ tolerations: []
 affinity: {}
 
 api:
+  event:
+    type: "awakari.activitypub.v1"
   writer:
     backoff: "10s"
     batchSize: 16
