--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -73,8 +73,8 @@ jobs:
             --values helm/int-activitypub/values-awakari-com.yaml \
             --set podAnnotations.commit=$(git rev-parse --short HEAD),db.password.secret.enabled=false,db.protocol=mongodb+srv,db.tls.enabled=true,db.tls.insecure=true,db.hostname=${{ secrets.DB_HOST_DEMO }},db.username=${{ secrets.DB_USERNAME_DEMO }},db.password.raw=${{ secrets.DB_PASSWORD_DEMO }}
 
-      - name: Helm Upgrade awakari.app
+      - name: Helm Upgrade poc
         run: |
-          helm upgrade --install ${COMPONENT}-awakari-app helm/package/${COMPONENT}-0.0.0.tgz \
-            --values helm/int-activitypub/values-awakari-app.yaml \
+          helm upgrade --install ${COMPONENT}-indy-rest helm/package/${COMPONENT}-0.0.0.tgz \
+            --values helm/int-activitypub/values-indy-rest.yaml \
             --set podAnnotations.commit=$(git rev-parse --short HEAD),db.password.secret.enabled=false,db.protocol=mongodb+srv,db.tls.enabled=true,db.tls.insecure=true,db.hostname=${{ secrets.DB_HOST_DEMO }},db.username=${{ secrets.DB_USERNAME_DEMO }},db.password.raw=${{ secrets.DB_PASSWORD_DEMO }}
