--- a/helm/int-activitypub/values.yaml
+++ b/helm/int-activitypub/values.yaml
@@ -40,6 +40,8 @@ service:
   port: 50051
   http:
     port: 8080
+  callback:
+    port: 8081
 
 ingress:
   enabled: false
@@ -100,6 +102,11 @@ api:
     type: "awakari.activitypub.v1"
   interests:
     uri: "subscriptions-proxy:50051"
+  reader:
+    uri: "http://reader:8080/v1"
+    callback:
+      protocol: "http"
+      path: "/v1/callback"
   writer:
     backoff: "10s"
     batchSize: 16
