fixes [skip ci]

--- a/helm/int-activitypub/templates/ingress-http-v1.yaml
+++ b/helm/int-activitypub/templates/ingress-http-v1.yaml
@@ -23,6 +23,9 @@ metadata:
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
     cert-manager.io/issuer: "{{ .Values.cert.issuer.name }}-int-activitypub"
+    ingress.kubernetes.io/server-snippet: |
+      ssl_protocols TLSv1.2 TLSv1.3;
+      ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
 spec:
   {{- if and .Values.ingressHttpV1.className (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion) }}
   ingressClassName: {{ .Values.ingressHttpV1.className }}
