--- a/helm/int-activitypub/values-awakari-com.yaml
+++ b/helm/int-activitypub/values-awakari-com.yaml
@@ -1,6 +1,8 @@
 api:
   event:
     type: "com.awakari.activitypub.v1"
+  interests:
+    detailsUriPrefix: "https://awakari.com/sub-details.html?id="
   writer:
     uri: "api:50051"
 
