--- a/helm/int-activitypub/values.yaml
+++ b/helm/int-activitypub/values.yaml
@@ -109,7 +109,7 @@ api:
     name: "awakari.com"
   event:
     type:
-      self: "awakari_activitypub_v1"
+      activityPub: "awakari_activitypub_v1"
       interestsUpdated: "interests-updated"
       interestsDeleted: "interests-deleted"
   interests:
