fix: shorter event format [skip ci]

--- a/helm/int-activitypub/values.yaml
+++ b/helm/int-activitypub/values.yaml
@@ -117,7 +117,7 @@ api:
     detailsUriPrefix: "https://awakari.com/sub-details.html?id="
   reader:
     uri: "http://reader:8080/v1"
-    uriEvtBase: "https://reader.awakari.com/v1/evt"
+    uriEvtBase: "https://awakari.com/pub-msg.html?id="
     callback:
       protocol: "http"
       path: "/v1/callback"
